--- a/NefyraExo/app/src/main/res/layout/custom_player_controls.xml
+++ b/NefyraExo/app/src/main/res/layout/custom_player_controls.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/custom_player_controls_root"
+    android:background="@drawable/gradient_bottom_controls"
     android:orientation="vertical"
-    android:background="#99000000"
     android:layout_gravity="bottom">
 
     <SeekBar
@@ -15,6 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="4dp"
+        android:layout_marginTop="20dp"
         android:thumb="@drawable/custom_seekbar_thumb"
         android:progressDrawable="@drawable/custom_seekbar_track"/>
 
